--- a/Developpez-le-back-end-en-utilisant-Java-et-Spring/backend/src/main/resources/application.properties
+++ b/Developpez-le-back-end-en-utilisant-Java-et-Spring/backend/src/main/resources/application.properties
@@ -5,17 +5,17 @@ server.port=3001
 
 # DataSource configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/chatop?serverTimeZone=UTC
-spring.datasource.username=root
-spring.datasource.password=rootroot
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 # JPA configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# JWT secret (cl\u00E9 d'exemple \u2014 remplace-la en prod)
-jwt.secret=MaSuperCleJWTQuiDoitFaire256BitsDeLongEtResterSecr\u00E8te!
+# JWT secret
+jwt.secret=${JWT_SECRET}
 
-file.upload-dir=/Users/alicepogam/Documents/Formation OCR/Java-Angular/P3/ChapTop/Developpez-le-back-end-en-utilisant-Java-et-Spring/src/assets
+file.upload-dir=/Developpez-le-back-end-en-utilisant-Java-et-Spring/src/assets
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
 
