--- a/Developpez-le-back-end-en-utilisant-Java-et-Spring/backend/src/main/resources/application.properties
+++ b/Developpez-le-back-end-en-utilisant-Java-et-Spring/backend/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # JWT secret
 jwt.secret=${JWT_SECRET}
 
-file.upload-dir=/Developpez-le-back-end-en-utilisant-Java-et-Spring/src/assets
+file.upload-dir=uploads
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
 
